--- a/src/index.css
+++ b/src/index.css
@@ -23,12 +23,13 @@ h1 {
 }
 
 .app {
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  background-color: rgba(0,0,0,0.4);
-  color: #fff;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    background-color: rgba(0,0,0,0.4);
+    color: #fff;
 }
+
 
 .app:before {
   content: '';
@@ -40,6 +41,13 @@ h1 {
   left: 0;
   z-index: -1;
 }
+.app.warm{
+    background: url('./assets/images/sun.jpg') no-repeat center center/cover;
+}
+.app.cold{
+    background: url('./assets/images/snow.jpg') no-repeat center center/cover;
+}
+
 
 .app .search {
   text-align: center;
@@ -100,7 +108,9 @@ h1 {
   font-weight: 700;
 }
 
-
+/* .flag{
+    padding: 10000;
+} */
 
 .switch_lang{
     display: flex;
@@ -109,7 +119,7 @@ h1 {
     margin-top: 1vh;
 }
 .lang_name{
-    padding: 1vh;
+    /* padding: 1vh; */
 }
 
 input[type=checkbox]{
